# traductorUMG

./: CMakeLists.txt  DOCUMENTACION.md  README.md
include/: AVLTree.h  AuthService.h  CipherPhase2.h  HistoryService.h  TranslationService.h  Types.h
src/: AVLTree.cpp  AuthService.cpp  CipherPhase2.cpp  HistoryService.cpp  TranslationService.cpp  main.cpp
